# lua

./: CMakeLists.txt  README.md
cmake/: luaConfig.cmake.in
pkg-config/: lua5.2.pc.in
src/: CMakeLists.txt
