CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(lua)

SET(CMAKE_C_FLAGS "-DLUA_USE_POSIX -DLUA_USE_DLOPEN")

CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/pkg-config/lua5.2.pc.in ${CMAKE_BINARY_DIR}/lua5.2.pc)
INSTALL(FILES ${CMAKE_BINARY_DIR}/lua5.2.pc DESTINATION lib/pkgconfig)

SET(LUA_LIBRARIES ${CMAKE_INSTALL_PREFIX}/liblua.a m)
SET(LUA_INCLUDE_DIRS ${CMAKE_INSTALL_PREFIX}/include)

CONFIGURE_FILE(${PROJECT_SOURCE_DIR}/cmake/luaConfig.cmake.in ${PROJECT_BINARY_DIR}/luaConfig.cmake)

SET(BINARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

INSTALL(FILES ${PROJECT_BINARY_DIR}/luaConfig.cmake DESTINATION lib)

ADD_SUBDIRECTORY(src)
